MSAL Wiki : https://github.com/AzureAD/microsoft-authentication-library-for-android/wiki

Version 2.0.0
----------
- Add Device Code Flow Support (#1112)
- Moved broker controller and strategy classes to common for MSALCPP brokered auth. (#1115)
- Allow Broker apps to obtain an RT associated to Broker's client ID (for WPJ). (#1126)
- (API Breaking Change) Removed 'defaultAuthority' param from TokenShareUtility; MSA RT ingestion always uses WW-/consumers. (#1147)
- Picks up common@3.0.1

Version 1.6.0
-----------
- Introduces new AadAuthorityAudience enum to support new syntax for specifying cloud + audience
- Adds new property to IAuthenticationResult: correlation_id
- Fix for String encoding issue affecting devices with Turkish locale
- Fix for #1092: (Single Account Mode) getCurrentAccount() does not return MSA accounts if broker is installed
- Fix for #1096: (Single Account Mode) signOut() doesn't remove MSA accounts if broker is installed
- Picks up common@2.0.15

Version 1.5.5
-----------
- Picks up fixes in common@2.0.12-hf1

Version 1.5.4
-----------
- Fix for NPE if sub_error is null.
- Picks up common@2.0.12

Version 1.5.3
-----------
- Changes to delete RT on bad_token suberror.
- Picks up common@2.0.11

Version 1.5.2
------------
- Broker Content Provider Changes
- FOCI support for Local MSAL
- Robolectric version update
- Fixed a bug related tenant ID(#1057)

Version 1.5.1
------------
- Fix to add the throwIfNetworkNotAvailable API back to common library for ADAL back compat.
- Picks up common@2.0.8

Version 1.5.0
------------
- Added new Single Account Public Client Application API overloads
	* Added new signIn() overload which adds a prompt param
	* Added new reauthorize() method which lets your set a prompt for the already-signed-in account
- Added default proguard config to project
- Added MSAL configuration flag to enable/disable power optimization check
- Added dual screen support
- Added Throttling