@@ -27,6 +27,7 @@ import com.microsoft.identity.client.exception.MsalUiRequiredException;
 import java.net.MalformedURLException;
 import java.net.URL;
 import java.util.Arrays;
+import java.util.Date;
 import java.util.List;
 
 /// Acting as a bridge between the result of MsalWrapper's results and the outside world.
@@ -201,10 +202,15 @@ abstract class MsalWrapper {
                 requestOptions.getScopes().toLowerCase().split(" "),
                 new IPublicClientApplication.DeviceCodeFlowCallback() {
                     @Override
-                    public void onUserCodeReceived(@NonNull String vUri, @NonNull String userCode, @NonNull String message) {
+                    public void onUserCodeReceived(@NonNull String vUri,
+                                                   @NonNull String userCode,
+                                                   @NonNull String message,
+                                                   @NonNull Date sessionExpirationDate) {
                         callback.showMessage(
                                 "Uri: " + vUri + "\n" +
-                                "UserCode: " + userCode);
+                                "UserCode: " + userCode + "\n" +
+                                "Message: " + message + "\n" +
+                                "sessionExpirationDate: " + sessionExpirationDate);
                     }
 
                     @Override
